<resources>
    <string name="app_name">4Read</string>

    <!--Login-->
    <string name="edit_email_login">Email</string>
    <string name="edit_password_login">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Cadastrar</string>

    <!--Register-->
    <string name="edit_name_register">Nome</string>
    <string name="edit_lastName_register">Sobrenome</string>
    <string name="edit_email_register">Email</string>


    <string name="edit_password_register">Password</string>
    <string name="edit_passwordConfirm_register">Corfirmar Password</string>


    <string name="btn_menu_favorites">Favoritos</string>
    <string name="btn_menu_releases">Lançamentos</string>
    <string name="btn_menu_categories">Categorias</string>
    <string name="btn_menu_profile">Perfil</string>
    <string name="btn_menu_settings">Configurações</string>
    <string name="btn_menu_about">Sobre</string>
    
    
    <!--Settings-->
    <string name="rdb_small_letter">Pequeno</string>
    <string name="rdb_middle_letter">Médio</string>
    <string name="rdb_big_letter">Grande</string>

    

    <!--Text About-->
    <string name="txtAbout"> O aplicativo 4Read é um serviço de assinatura de livros e comic books.
        Aplicativo desenvolvido por Cainã Paulosso Bonfiglioli, graduando da Fatec Ribeirão Preto</string>

    <!-- Text Terms-->
    <string name="txtTerms">Todos os direitos estão reservados a editora e aos Autores</string>
    
    <!--Arrays-->

    <string-array name="genre_array">
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Não especificado</item>
    </string-array>

    <string-array name="months_array">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>

    <string-array name="days_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>21</item>
    </string-array>


    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuário</string>
    <string name="nav_header_subtitle">usuario.user@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
