<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.MainActivity">

    <ImageView
        android:src="@drawable/logo"
        android:layout_marginTop="110dp"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/edit_email"
        android:hint="@string/edit_email_login"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edit_password"
        android:hint="@string/edit_password_login"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/btn_login"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_login_register"
        android:text="@string/btn_register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"/>>

</LinearLayout>