<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.RegisterActivity">

    <EditText
        android:id="@+id/edit_name"
        android:hint="@string/edit_name_register"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edit_lastName"
        android:hint="@string/edit_lastName_register"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edit_email_register"
        android:hint="@string/edit_email_register"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edit_password_register"
        android:hint="@string/edit_password_register"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edit_password_register"
        android:hint="@string/edit_passwordConfirm_register"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:text="Mes de nascimento"
        android:labelFor="@+id/spn_months"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spn_months"
        android:spinnerMode="dropdown"
        android:entries="@array/months_array"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"></Spinner>

    <TextView
        android:text="Dia de nascimento"
        android:labelFor="@+id/spn_days"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spn_days"
        android:spinnerMode="dropdown"
        android:entries="@array/days_array"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"></Spinner>

    <Button
        android:id="@+id/btn_Terms_Register"
        android:text="Termos de Uso"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_height="15dp" />

    <CheckBox
        android:id="@+id/ckb_terms"
        android:text="Li e concordo com os termos de uso"
        android:textColor="#000"
        android:textSize="10dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/btn_register_register"
        android:text="@string/btn_register"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_gravity="center" />

</LinearLayout>